Paginas y rutas del navbar

--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,6 +1,6 @@
 <header>
   <nav class="nav-header">
-    <a routerLink="/home" id="name" class="name">Ingeniería Eléctrica</a>
+    <a routerLink="/inicio" id="name" class="name">Ingeniería Eléctrica</a>
     <input type="checkbox" id="nav-check">
     <div class="nav-toggle">
       <label class="label" for="nav-check">
@@ -10,10 +10,10 @@
       </label>
     </div>
     <ul class="nav-menu">
-      <li class="nav-menu-item"><a id="about-me" routerLink="/about-me">Computación Numérica</a></li>
-      <li class="nav-menu-item"><a id="my-projects" routerLink="/my-projects">Informática</a></li>
-      <li class="nav-menu-item"><a id="blog" routerLink="/blog">Métodos Numéricos</a></li>
-      <li class="nav-menu-item"><a id="contact" routerLink="/contact">Semillero</a></li>
+      <li class="nav-menu-item"><a id="computing" routerLink="/computacion-numerica">Computación Numérica</a></li>
+      <li class="nav-menu-item"><a id="computer" routerLink="/informatica">Informática</a></li>
+      <li class="nav-menu-item"><a id="methods" routerLink="/metodos-numericos">Métodos Numéricos</a></li>
+      <li class="nav-menu-item"><a id="hotbed" routerLink="/semillero-electron">Semillero</a></li>
     </ul>
   </nav>
 </header>
