--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,1 +1,37 @@
-<p>home works!</p>
+<h1>Departamento de Ingeniería Eléctrica / Universidad de Antioquia</h1>
+<section class="history">
+  <h2>Historia</h2>
+  <p>El programa de Ingeniería Eléctrica se creó en 1968, adscrito a la Facultad de Ingeniería, como un pregrado que
+    estaría a la vanguardia en las aplicaciones de la electricidad a nivel industrial y residencial, buscando fortalecer
+    los nuevos campos de acción atribuidos a los desarrollos de la electricidad. </p>
+  <p>Cabe recordar que para la década de 1960 se inauguraron en Colombia los proyectos de generación de la Central
+    Laguneta (1960), cuarta unidad; Central Turbogas Cospique (1960); Termoeléctrica de Yumbo (1962); Termopiza I
+    (1963); El Salto II (1963); La Esmeralda (1963); Paipa I (1963); Troneras (1965), y Calima (1967). Además, para 1966
+    se firmó el “Convenio sobre la Interconexión de los Sistemas Eléctricos y Ensanche de la Capacidad Generadora”, por
+    parte de Empresas Públicas de Medellín (EPM), Empresa de Energía de Bogotá (EEB), Electraguas y la Corporación
+    Autónoma Regional del Cauca. Lo anterior, aunado al desarrollo del departamento de Antioquia (que para 1964 tenía
+    una población cercana a los 2,5 millones de habitantes), que causaba una gran demanda de energía para fortalecer
+    todos los campos de acción que pudiera tener esta nueva fuerza laboral, la cual comenzaba a dejar el campo y llegaba
+    a la ciudad en busca de nuevas oportunidades.</p>
+  <p>Específicamente, el programa fue creado junto con otros pregrados: Ingeniería Mecánica, Ingeniería Sanitaria e
+    Ingeniería Electrónica, con el fin de resolver las diferentes necesidades del medio local y regional, tales como:
+  </p>
+  <ul>
+    <li>Crecimiento de la mediana industria en Medellín en las áreas textil, fundiciones, químicos, alimentos, entre
+      otras. </li>
+    <li>Crecimiento demográfico del departamento de Antioquia, específicamente en aquellos sitios de influencia del
+      Ferrocarril de Antioquia y en la ciudad capital: Medellín.</li>
+    <li>Necesidad de aumento en la tasa de cualificación y ocupación de los ciudadanos.</li>
+    <li>Un desarrollo tecnológico incipiente exigía ingenieros electricistas capacitados para trabajar en la
+      modernización de las instalaciones industriales y en la implementación de equipos más eficientes, buscando
+      alternativas económicas y técnicas para dar solución al desarrollo que el país estaba demandando.</li>
+  </ul><br>
+  <p>A pesar de haberse creado en 1968, el Decano de la época, el ingeniero Juan José Echeverri Escobar, solicitó que
+    solo hasta 1970 se comenzaran labores, pues no existía en la ciudad o en el país la suficiente cantidad de egresados
+    en esta área, ya que la única Universidad que tenía el programa en Medellín era la Universidad Pontificia
+    Bolivariana (UPB) desde 1950, mientras que en la Escuela de Minas de la Universidad Nacional (sede Medellín) se
+    comenzaron labores en 1967.</p>
+  <p>Sin embargo, cuatro estudiantes de Ingeniería Electrónica, que también debieron comenzar labores en 1970,
+    solicitaron cambio de programa y se aceptó por parte del Consejo Directivo (hoy llamado Consejo de Facultad); razón
+    por la cual Ingeniería Eléctrica de la Universidad de Antioquia comenzó labores en 1969.</p>
+</section>
