Rutas de las clases

--- a/src/app/pages/computer/computer.component.html
+++ b/src/app/pages/computer/computer.component.html
@@ -1,1 +1,9 @@
-<p>computer works!</p>
+<h1>Informática</h1>
+
+<section class="classes">
+  <h2>Clases</h2>
+  <ol start="0">
+    <li><a id="computing" routerLink="/informatica/00-introduccion-curso">Introducción al curso</a></li>
+    <li><a id="computing" routerLink="/informatica/01-introduccion-python">Introducción a Python</a></li>
+  </ol>
+</section>
