Clase 00 informatica-Parte 1

--- a/src/app/classes/computer/introduction-course/introduction-course.component.html
+++ b/src/app/classes/computer/introduction-course/introduction-course.component.html
@@ -1,1 +1,108 @@
-<p>introduction-course works!</p>
+<h1>Clase 00. Introducción al curso</h1>
+<ul>
+  <li>¿Qué entendemos por programar?</li>
+  <li>¿Qué relación existe entre el cálculo y los computadores?</li>
+  <li>¿Por qué programar en ingeniería?</li>
+  <li>¿Qué es un algoritmo?</li>
+  <li>¿Cuál es tu opinión con respecto al uso que en la actualidad se da a los computadores en la industria y/o sociedad?</li>
+  <li>¿Qué podemos hacer al finalizar el curso?</li>
+</ul>
+<h2>Objetivo</h2>
+<p>Construir algoritmos y programas de computador de baja complejidad utilizando el lenguaje de programación Python.</p>
+<h2>Resultados de aprendizaje</h2>
+<ul>
+  <li>Conocer los principales componentes de un sistema informático para entender el rol que cumplen en la ejecución de los programas de computador.</li>
+  <li>Aplicar las técnicas básicas del diseño de algoritmos para construir soluciones a problemas de la ingeniería basados en datos.</li>
+  <li>Escribir programas de computador en lenguaje Python como herramienta de apoyo para la solución de problemas de ingeniería.</li>
+  <li>Desarrollar herramientas computacionales de análisis y visualización de datos para la solución de problemas en ingeniería.</li>
+</ul>
+<h2>Competencias a desarrollar</h2>
+<div class="columns">
+  <div class="column">
+    <ul>
+      <li>Juicio analítico</li>
+      <li>Planificación</li>
+      <li>Sentido ético</li>
+      <li>Comunicación argumentada</li>
+      <li>Negociación y participación</li>
+      <li>Pensamiento crítico</li>
+    </ul>
+  </div>
+  <div class="column">
+    <ul>
+      <li>Resolución de problemas</li>
+      <li>Adaptación al cambio</li>
+      <li>Toma de decisiones</li>
+      <li>Trabajo en equipo</li>
+      <li>Aprender a aprender</li>
+    </ul>
+  </div>
+</div>
+<h2>Contenido general</h2>
+<p><strong>Unidad 1.</strong> Introducción a los sistemas computacionales. Número de semanas: 1</p>
+<p><strong>Unidad 2.</strong> Algoritmos y Python. Número de semanas: 4</p>
+<p><strong>Unidad 3.</strong> Programación modular. Número de semanas: 4</p>
+<p><strong>Unidad 4.</strong> Estructuras de datos. Número de semanas: 4</p>
+<p><strong>Unidad 5.</strong> visualización de datos. Número de semanas: 3</p>
+<h2>Contenido detallado</h2>
+<p><strong>Unidad 1.</strong> Introducción a los sistemas computacionales</p>
+<ul>
+  <li>Historia de la computación</li>
+  <li>Hardware y software</li>
+  <li>Lenguajes de programación</li>
+  <li>Codificación binaria</li>
+</ul>
+<p><strong>Unidad 2.</strong> Algoritmos y Python</p>
+<ul>
+  <li>Pensamiento algorítmico</li>
+  <li>Estrategias para la solución de problemas con el computador</li>
+  <li>Introducción a Python</li>
+  <li>Operadores y variables</li>
+  <li>Entrada y salida de datos</li>
+  <li>Condicionales y ciclos</li>
+  <li>Introducción a estructuras de datos Introducción a estructuras de datos (cadenas de caracteres, listas e indexación)</li>
+  <li>Buenas prácticas de programación (PEP8)</li>
+</ul>
+<p><strong>Unidad 3.</strong> Programación modular</p>
+<ul>
+  <li>Definición de funciones</li>
+  <li>Invocación de funciones</li>
+  <li>Ámbito de las variables</li>
+  <li>Modularización del código</li>
+  <li>Librerías</li>
+  <li>Documentación</li>
+  <li>Proyecto final I</li>
+</ul>
+<p><strong>Unidad 4.</strong> Estructuras de datos</p>
+<ul>
+  <li>Listas, tuplas y diccionarios</li>
+  <li>Lectura y escritura de archivos de texto plano</li>
+  <li>Numpy</li>
+  <li>Pandas</li>
+</ul>
+<p><strong>Unidad 5.</strong> Visualización de datos</p>
+<ul>
+  <li>Visualización de datos con herramientas de Python</li>
+  <li>Proyecto final II</li>
+</ul>
+<p><strong>Temas opcionales</strong></p>
+<ul>
+  <li>Programación Orientada a Objetos en Python (1 sesión de clase)</li>
+  <li>Pruebas y depuración</li>
+  <li>Complejidad computacional</li>
+  <li>Widgets</li>
+</ul>
+<h2>Desarrollo del curso</h2>
+<p><strong>Filosofía:</strong> Conformarnos como un grupo de <strong>estudio solidario</strong> con buena comunicación y responsabilidad para un aprendizaje efectivo.</p>
+<ul>
+  <li>Curso Autogestionado con reuniones teórico prácticas</li>
+  <li>Desarrollo de actividades</li>
+  <li>Sustentación de trabajos</li>
+</ul>
+<h2>Herramientas de desarrollo</h2>
+<p><strong>MATLAB</strong> Abreviatura de MATrix LABoratory, laboratorio de matrices</p> <a routerLink="www.mathworks.com">www.mathworks.com</a>
+<p><strong>GNU Octave</strong> GNU Octave is a high level interpreted language, primarily intended for numerical computations.</p>
+<p>The Octave language is quite similar to Matlab so that most programs are easily portable.</p>
+<a routerLink="https://www.gnu.org/software/octave/">https://www.gnu.org/software/octave/</a>
+<p><strong>Python</strong> Lenguaje de programación interpretado multipropósito, cuya filosofía hace hincapié en una sintaxis que favorezca un código legible.</p>
+<a routerLink=" https://www.python.org/"> https://www.python.org/</a>
