--- a/src/app/pages/computer/computer.component.html
+++ b/src/app/pages/computer/computer.component.html
@@ -7,3 +7,11 @@
     <li><a id="computing" routerLink="/informatica/01-introduccion-python">Introducción a Python</a></li>
   </ol>
 </section>
+
+<section class="workshops">
+  <ol>
+    <li><a id="computing" routerLink="/informatica/01-operadores-variables">Operadores y variables</a></li>
+    <li><a id="computing" routerLink="/informatica/01-introduccion-python">Diagramas de flujo y pseudocódigo</a></li>
+  </ol>
+
+</section>
