--- a/src/app/pages/computer/computer.component.html
+++ b/src/app/pages/computer/computer.component.html
@@ -9,6 +9,7 @@
 </section>
 
 <section class="workshops">
+  <h2>Talleres</h2>
   <ol>
     <li><a id="computing" routerLink="/informatica/01-operadores-variables">Operadores y variables</a></li>
     <li><a id="computing" routerLink="/informatica/01-introduccion-python">Diagramas de flujo y pseudocódigo</a></li>
