--- a/src/app/classes/computer/introduction-course/introduction-course.component.html
+++ b/src/app/classes/computer/introduction-course/introduction-course.component.html
@@ -52,17 +52,19 @@
   <li>Lenguajes de programación</li>
   <li>Codificación binaria</li>
 </ul>
+<br>
 <p><strong>Unidad 2.</strong> Algoritmos y Python</p>
 <ul>
-  <li>Pensamiento algorítmico</li>
-  <li>Estrategias para la solución de problemas con el computador</li>
-  <li>Introducción a Python</li>
-  <li>Operadores y variables</li>
-  <li>Entrada y salida de datos</li>
-  <li>Condicionales y ciclos</li>
-  <li>Introducción a estructuras de datos Introducción a estructuras de datos (cadenas de caracteres, listas e indexación)</li>
-  <li>Buenas prácticas de programación (PEP8)</li>
+  <li>Pensamiento algorítmico.</li>
+  <li>Estrategias para la solución de problemas con el computador.</li>
+  <li>Introducción a Python.</li>
+  <li>Operadores y variables.</li>
+  <li>Entrada y salida de datos.</li>
+  <li>Condicionales y ciclos.</li>
+  <li>Introducción a estructuras de datos Introducción a estructuras de datos (cadenas de caracteres, listas e indexación).</li>
+  <li>Buenas prácticas de programación (PEP8).</li>
 </ul>
+<br>
 <p><strong>Unidad 3.</strong> Programación modular</p>
 <ul>
   <li>Definición de funciones</li>
@@ -73,6 +75,7 @@
   <li>Documentación</li>
   <li>Proyecto final I</li>
 </ul>
+<br>
 <p><strong>Unidad 4.</strong> Estructuras de datos</p>
 <ul>
   <li>Listas, tuplas y diccionarios</li>
@@ -80,11 +83,13 @@
   <li>Numpy</li>
   <li>Pandas</li>
 </ul>
+<br>
 <p><strong>Unidad 5.</strong> Visualización de datos</p>
 <ul>
   <li>Visualización de datos con herramientas de Python</li>
   <li>Proyecto final II</li>
 </ul>
+<br>
 <p><strong>Temas opcionales</strong></p>
 <ul>
   <li>Programación Orientada a Objetos en Python (1 sesión de clase)</li>
@@ -100,9 +105,80 @@
   <li>Sustentación de trabajos</li>
 </ul>
 <h2>Herramientas de desarrollo</h2>
-<p><strong>MATLAB</strong> Abreviatura de MATrix LABoratory, laboratorio de matrices</p> <a routerLink="www.mathworks.com">www.mathworks.com</a>
-<p><strong>GNU Octave</strong> GNU Octave is a high level interpreted language, primarily intended for numerical computations.</p>
-<p>The Octave language is quite similar to Matlab so that most programs are easily portable.</p>
-<a routerLink="https://www.gnu.org/software/octave/">https://www.gnu.org/software/octave/</a>
-<p><strong>Python</strong> Lenguaje de programación interpretado multipropósito, cuya filosofía hace hincapié en una sintaxis que favorezca un código legible.</p>
-<a routerLink=" https://www.python.org/"> https://www.python.org/</a>
+<p><strong>MATLAB</strong> Abreviatura de MATrix LABoratory, laboratorio de matrices. <a href="www.mathworks.com" target="_blank" rel="noopener noreferrer">www.mathworks.com</a></p>
+<p><strong>GNU Octave</strong> GNU Octave is a high level interpreted language, primarily intended for numerical computations. The Octave language is quite similar to Matlab so that most programs are easily portable. <a href="https://www.gnu.org/software/octave/" target="_blank" rel="noopener noreferrer">https://www.gnu.org/software/octave/</a></p>
+<p><strong>Python</strong> Lenguaje de programación interpretado multipropósito, cuya filosofía hace hincapié en una sintaxis que favorezca un código legible. <a href="https://www.python.org/" target="_blank" rel="noopener noreferrer">https://www.python.org/</a></p>
+<p>Python es multiplataforma, esto quiere decir
+  que lo puede utilizar en casi cualquier sistema
+  operativo, Windows, Chromebook, Android,
+  GNU/Linux o Macintosh y otros.</p>
+  <p><strong>Colab </strong><a href="https://colab.research.google.com/" target="_blank" rel="noopener noreferrer">https://colab.research.google.com/</a></p>
+  <p><strong>Anaconda</strong> Anaconda Distribution is the easiest way to perform
+    Python/R data science and machine learning on
+    Linux, Windows, and Mac OS X. Quickly download 1,500+ Python/R data science
+    packages. Manage libraries, dependencies, and environments. Develop and train machine learning and deep
+    learning models with scikit learn, TensorFlow, and
+    Theano. <a href="https://www.anaconda.com/" target="_blank" rel="noopener noreferrer">https://www.anaconda.com/</a></p>
+<p><strong>También puede ejecutar python en el navegador</strong></p>
+<ul>
+<li><a href="http://www.pythontutor.com/" target="_blank" rel="noopener noreferrer">http://www.pythontutor.com/</a></li>
+<li><a href="https://repl.it/languages/python3" target="_blank" rel="noopener noreferrer">https://repl.it/languages/python3</a></li>
+<li><a href="https://www.pythonanywhere.com/" target="_blank" rel="noopener noreferrer">https://www.pythonanywhere.com/</a></li>
+<li><a href="https://www.python.org/shell/" target="_blank" rel="noopener noreferrer">https://www.python.org/shell/</a></li>
+<li><a href="https://paiza.io/es/languages/python3" target="_blank" rel="noopener noreferrer">https://paiza.io/es/languages/python3</a></li>
+</ul>
+<br>
+<p><strong>Entorno de desarrollo integrado IDE y editores de texto:</strong></p>
+<ul>
+  <li><a href="https://notepad-plus-plus.org/" target="_blank" rel="noopener noreferrer">Notepad++</a></li>
+  <li><a href="https://gedit-technology.github.io/apps/gedit/" target="_blank" rel="noopener noreferrer">Gedit</a></li>
+  <li><a href="https://thonny.org/" target="_blank" rel="noopener noreferrer">Thonny</a></li>
+  <li><a href="https://www.spyder-ide.org/" target="_blank" rel="noopener noreferrer">Spyder</a></li>
+  <li><a href="https://www.jetbrains.com/es-es/pycharm/" target="_blank" rel="noopener noreferrer">PyCharm</a></li>
+  <li><a href="https://www.geany.org/" target="_blank" rel="noopener noreferrer">Geany</a></li>
+  <li><a href="https://docs.python.org/3/library/idle.html" target="_blank" rel="noopener noreferrer">IDLE</a></li>
+</ul>
+<h2>Contenido resumido</h2>
+<ul>
+  <li>Conocimiento del computador.</li>
+  <li>Pasos para la solución de un problema a través del
+    computador.</li>
+  <li>Programación Estructurada: decisiones y ciclos</li>
+  <li>Lenguaje de Programación: Introducción a Python</li>
+  <li>Arreglos de datos.</li>
+  <li>Funciones.</li>
+  <li>Archivos (I/O)</li>
+</ul>
+
+
+<h2>Bibliografía</h2>
+<p><strong>Libros</strong></p>
+<ul>
+  <li><i>Lógica de Programación</i>. Oviedo R, Efraín.</li>
+  <li><i>Soluciones Secuenciales</i>. Ríos C, Fabián.</li>
+  <li><i>Algoritmos Estructurados</i>. Oviedo R, Efraín.</li>
+  <li><i>Fundamentos de Programación</i>. Joyanes, Luis.</li>
+  <li><i>Problemas de la Metodología en la Programación</i>. Joyanes, Luis.</li>
+  <li><i>Algoritmos, Conceptos Básicos</i>. Becerra, César.</li>
+  <li><i>Algoritmos</i>. Peralta, Luis A.</li>
+  <li><i>Desarrollo de Algoritmos y sus Aplicaciones</i>. Correa, Guillermo.</li>
+  <li>Cualquier libro sobre algoritmos y programación.</li>
+</ul>
+<br>
+<ul>
+  <li><i>Lógica de Programación</i>. Oviedo R, Efraín.</li>
+  <li><i>Soluciones Secuenciales</i>. Ríos C, Fabián.</li>
+  <li><i>Algoritmos Estructurados</i>. Oviedo R, Efraín.</li>
+  <li><i>Fundamentos de Programación</i>. Joyanes, Luis.</li>
+  <li><i>Problemas de la Metodología en la Programación</i>. Joyanes, Luis.</li>
+  <li><i>Algoritmos, Conceptos Básicos</i>. Becerra, César.</li>
+  <li><i>Algoritmos</i>. Peralta, Luis A.</li>
+  <li><i>Desarrollo de Algoritmos y sus Aplicaciones</i>. Correa, Guillermo.</li>
+  <li>Cualquier libro sobre algoritmos y programación.</li>
+  <li><i>Python con aplicaciones a las matemáticas, ingeniería y finanzas</i>. Cervantes, O. D., Báez, J. M., Arizaga, A., & Castillo, E. (2017). Alfaomega, Primera Edición, México.</li>
+  <li><i>Python 3: los fundamentos del lenguaje</i>. Chazallet, S. (2016). Ediciones ENI.</li>
+  <li><i>Python: guía paso a paso para aprender programación Python</i>. Lutz, L. (2018). California: CreateSpace Independent Publishing Platform.</li>
+  <li><i>Introducción a la programación con Python: Algoritmos y lógica de programación para principiantes</i>. Menezes, N. N. C. (2017). Novatec Editora.</li>
+  <li><i>Python fácil</i>. Pérez, A. (2016). Alpha Editorial.</li>
+  <li><i>Python Data Science Handbook: Essential Tools for Working with Data</i>. VanderPlas, J. (2016). O'Reilly Media.</li>
+</ul>
