--- a/src/app/classes/computer/introduction-python/introduction-python.component.html
+++ b/src/app/classes/computer/introduction-python/introduction-python.component.html
@@ -1,1 +1,81 @@
-<p>introduction-python works!</p>
+<h1>Clase 01. Introducción a Python</h1>
+<h2>Contenido</h2>
+<ul>
+    <li>¿Qué es Python?</li>
+    <li>Características principales</li>
+    <li>¿Quiénes lo usan?</li>
+    <li>Librerías más comunes</li>
+    <li>Entornos de desarrollo</li>
+    <ul>
+        <li>Instalación local</li>
+        <li>En la nube</li>
+    </ul>
+    <li><strong>Cuadernos de Jupyter</strong> (Jupyter notebooks)</li>
+</ul>
+<h2>¿Qué es Python</h2>
+<p>Es un lenguaje de programación de propósito general, y uno de los más usados.</p>
+<ul>
+    <li>Lenguaje de alto nivel.</li>
+    <li>Interpretado.</li>
+    <li>Orientado a objetos (OOP).</li>
+    <li>Sintaxis sencilla y fácil de leer.</li>
+    <li>Creado por Guido Van Rossum (Holanda) en 1989 (Monty Python).</li>
+    <li>Dos versiones vigentes: 2.7 y 3.x (3.11.1).</li>
+</ul>
+<ul>
+    <li>Aplicaciones científicas:</li>
+    <ul>
+        <li>Cálculos numéricos.</li>
+        <li>Representación gráfica de datos.</li>
+        <li>Análisis estadístico.</li>
+        <li>Simulación y optimización.</li>
+        <li>Inteligencia artificial.</li>
+    </ul>
+    <li>Bases de datos.</li>
+    <li>Aplicaciones web y móviles.</li>
+    <li>Páginas web.</li>
+    <li>Videojuegos.</li>
+</ul>
+<h2>Características principales</h2>
+<ul>
+    <li><strong>Lenguaje indentado</strong> (pseudocódigo)</li>
+    <li>Fácil de aprender</li>
+    <li>Código fácil de leer</li>
+    <li>De código abierto → Sin costo por su uso</li>
+    <li>Versátil → Todo tipo de aplicaciones.</li>
+    <li>Soporte → Gran comunidad de usuarios (ayuda y librerías)</li>
+    <li>Multiplataforma → Windows, Linux, Mac</li>
+    <li>Embebido y extensible → Compatibilidad con otros lenguajes.</li>
+    <li>Interpretado → Velocidad de desarrollo y depuración</li>
+    <li>OOP → Seguridad y economía de código.</li>
+</ul>
+<h2>¿Quiénes lo usan?</h2>
+<img src="https://github.com/Ingenieria-Electrica-UdeA/banco_imagenes/raw/main/presentaciones/empresas-que-usan-python.png" alt="Empresas que usan Python" style="width: 100%;">
+<h2>Librerías más comunes</h2>
+<img src="https://github.com/Ingenieria-Electrica-UdeA/banco_imagenes/blob/main/presentaciones/librerias-comunes-python.png" alt="Librerías más comunes de Python" style="width: 100%;">
+<h2>Entornos de desarrollo</h2>
+<p>Instalación local</p>
+<img src="https://github.com/Ingenieria-Electrica-UdeA/banco_imagenes/raw/main/presentaciones/entornos-desarrollo-python-1.png" alt="Entornos de Desarrollo Python" style="width: 100%; height: auto;">
+<img src="https://github.com/Ingenieria-Electrica-UdeA/banco_imagenes/raw/main/presentaciones/entornos-desarrollo-python-2.png" alt="Entornos de Desarrollo Python" style="width: 100%; height: auto;">
+<p><strong>En la nube: </strong>Google Colab (colaboratory) → <a href="https://colab.research.google.com/" target="_blank">https://colab.research.google.com/</a> Creación y ejecución de programas de Python en un navegador de internet.</p>
+<img src="https://github.com/Ingenieria-Electrica-UdeA/banco_imagenes/raw/main/presentaciones/entornos-desarrollo-python-3.png" alt="Entornos de Desarrollo Python" style="width: 100%; height: auto;">
+<ul>
+    <li><strong>Sin necesidad de instalación ni configuración</strong></li>
+    <li><strong>Acceso gratuito a GPUs</strong></li>
+    <li>A través de internet → <strong>Cualquier dispositivo</strong> (móviles, tabletas)</li>
+    <li>Respaldo de la información (Google drive)</li>
+    <li>Facilidad de compartir archivos</li>
+    <li>Trabajo colaborativo.</li>
+    <li>Colab notebook → Similar a <strong>Jupyter Notebook</strong></li>
+</ul>
+<h2>Cuadernos de Jupyter</h2>
+<img src="https://github.com/Ingenieria-Electrica-UdeA/banco_imagenes/raw/main/presentaciones/cuadernos-jupyter.png" alt="Cuadernos de Jupyter" style="width: 100%; height: auto;">
+<ul>
+    <li>Ejecución en un navegador de internet (instalación local o en la nube)</li>
+    <li>Pestaña navegador de archivos</li>
+    <li>Una pestaña por cada programa de Python.</li>
+    <li>Componente básico: celdas → Ejecución individual</li>
+    <li>Celdas de código → Código de Python (comentarios: #)</li>
+    <li>Celdas de texto / gráficos → Markdown</li>
+    <li>Resultados (datos y gráficas) → Salida de la celda correspondiente</li>
+</ul>
