--- a/src/app/pages/computing/computing.component.html
+++ b/src/app/pages/computing/computing.component.html
@@ -1,1 +1,15 @@
 <h1>Computación Numérica</h1>
+
+<section class="classes">
+  <h2>Clases</h2>
+  <ol start="0">
+    <li><a routerLink="/computacion-numerica/00-introduccion-curso">Introducción al curso</a></li>
+  </ol>
+</section>
+
+<section class="workshops">
+  <h2>Talleres</h2>
+  <ol>
+  </ol>
+
+</section>
